--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title} on server: #{server}
+  p Welcome to #{title} on container: #{server}
