--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title} on container: #{server}
-  p Thanks for watching this demo!
+  p Hello World!
