--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title} on container: #{server}
-  p Hello Wereld!
+  H1 Hallo VMUG Nederland!
+  p Bezoek ook ons blog: a(href=http://www.automate-it.today) automate-it.today
