--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,7 @@ block content
   h1= title
   p Welcome to #{title} on container: #{server}
   H1 Hallo VMUG Nederland!
-  p Bezoek ook ons blog: a(href="http://www.automate-it.today") automate-it.today
+  p 
+     | Bezoek ook ons blog: 
+     a(href="http://www.automate-it.today") 
+     | automate-it.today
