--- a/views/index.jade
+++ b/views/index.jade
@@ -6,5 +6,4 @@ block content
   H1 Hallo VMUG Nederland!
   p 
      | Bezoek ook ons blog: 
-     a(href="http://www.automate-it.today") 
-     | automate-it.today
+     a(href="http://www.automate-it.today") automate-it.today
