--- a/views/index.jade
+++ b/views/index.jade
@@ -3,4 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title} on container: #{server}
-  p Hallo Wereld!!
+  h1 Hallo VMUG Nederland!
+  p 
+     | Thanks for watching! Bezoek ook ons blog: 
+     a(href="http://www.automate-it.today") automate-it.today
