--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,4 @@ block content
   h1= title
   p Welcome to #{title} on container: #{server}
   h1 Hallo VMUG Nederland!
-  p 
-     | Thanks for watching! Bezoek ook ons blog: 
-     a(href="http://www.automate-it.today") automate-it.today
+  p Hallo Wereld!!
