--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title} on container: #{server}
-  h1 Hallo VMUG Nederland!
+  h1 Hello World!
   p 
-     | Thanks for watching! Bezoek ook ons blog: 
+     | Thanks for attending. Please checkout our blog: 
      a(href="http://www.automate-it.today") automate-it.today
