--- a/views/index.jade
+++ b/views/index.jade
@@ -4,3 +4,6 @@ block content
   h1= title
   p Welcome to #{title} on container: #{server}
   h1 Hello World!
+  p 
+     | Brought to you by: 
+     a(href="http://www.automate-it.today") automate-it.today
