--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,8 @@ extends layout
 block content
   h1= title
   p Welcome to #{title} on container: #{server}
-  h1 Hello World!
+  h1 Hello VMUG Belgium!
   p 
-     | Brought to you by: 
+     | Thanks for watching! Please checkout our blog: 
      a(href="http://www.automate-it.today") automate-it.today
+ 
